--- a/client/index.html
+++ b/client/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <title>Movie app</title>
 </head>
 <body>
     <div id="root"></div>
-    <script src="public/src/index.min.js"></script>
+    <script src="src/index.min.js"></script>
 </body>
 </html>
